// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PerfectionsStamp ok level 1`] = `
<div
  className="PerfectionStamp PerfectionStamp_level_ok"
>
  <PerfectionIssueLevelIcon
    level="ok"
    type="plain"
  />
  <div
    className="PerfectionStamp-Description"
  >
    <div
      className="PerfectionStamp-Title"
    >
      i18n:not-problems-found
    </div>
    <div
      className="PerfectionStamp-Content"
    >
      <result />
    </div>
  </div>
</div>
`;

exports[`PerfectionsStamp warning level 1 1`] = `
<div
  className="PerfectionStamp"
>
  <PerfectionIssueLevelIcon
    className="PerfectionStamp-Icon"
    level="warning"
    type="round"
  />
  <div
    className="PerfectionStamp-Description"
  >
    <div
      className="PerfectionStamp-Title"
    >
      i18n:found-n-issues
    </div>
    <mockConstructor
      execution={
        Object {
          "applyDate": 2019-09-29T21:00:00.000Z,
          "name": Object {
            "ru": "Сервис перейдёт в статус Требуется информация",
          },
        }
      }
    />
    <button2
      size="s"
      tabIndex={0}
      theme="pseudo"
      view="classic"
    >
      i18n:fix-issues
    </button2>
  </div>
</div>
`;

exports[`PerfectionsStamp warning level 1 without execution 1`] = `
<div
  className="PerfectionStamp"
>
  <PerfectionIssueLevelIcon
    className="PerfectionStamp-Icon"
    level="warning"
    type="round"
  />
  <div
    className="PerfectionStamp-Description"
  >
    <div
      className="PerfectionStamp-Title"
    >
      i18n:found-n-issues
    </div>
    <button2
      size="s"
      tabIndex={0}
      theme="pseudo"
      view="classic"
    >
      i18n:fix-issues
    </button2>
  </div>
</div>
`;

exports[`PerfectionsStamp warning level 3 1`] = `
<div
  className="PerfectionStamp"
>
  <PerfectionIssueLevelIcon
    className="PerfectionStamp-Icon"
    level="warning"
    type="round"
  />
  <div
    className="PerfectionStamp-Description"
  >
    <div
      className="PerfectionStamp-Title"
    >
      i18n:found-n-issues
    </div>
    <mockConstructor
      execution={
        Object {
          "applyDate": 2019-09-29T21:00:00.000Z,
          "name": Object {
            "ru": "Сервис перейдёт в статус Требуется информация",
          },
        }
      }
    />
    <button2
      size="s"
      tabIndex={0}
      theme="pseudo"
      view="classic"
    >
      i18n:fix-issues
    </button2>
  </div>
</div>
`;

exports[`PerfectionsStamp warning level 5 1`] = `
<div
  className="PerfectionStamp"
>
  <PerfectionIssueLevelIcon
    className="PerfectionStamp-Icon"
    level="warning"
    type="round"
  />
  <div
    className="PerfectionStamp-Description"
  >
    <div
      className="PerfectionStamp-Title"
    >
      i18n:found-n-issues
    </div>
    <mockConstructor
      execution={
        Object {
          "applyDate": 2019-09-29T21:00:00.000Z,
          "name": Object {
            "ru": "Сервис перейдёт в статус Требуется информация",
          },
        }
      }
    />
    <button2
      size="s"
      tabIndex={0}
      theme="pseudo"
      view="classic"
    >
      i18n:fix-issues
    </button2>
  </div>
</div>
`;
